--- a/periculum/build.gradle
+++ b/periculum/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    kotlin {
+        explicitApi = 'strict'
+    }
 }
 
 dependencies {
@@ -39,7 +42,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "androidx.startup:startup-runtime:1.0.0-alpha01"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-RC2'
+    def retrofit_version = '2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:'+retrofit_version
+    implementation 'com.squareup.retrofit2:converter-gson:'+retrofit_version
 }
 
 afterEvaluate {
