--- a/periculum/src/main/AndroidManifest.xml
+++ b/periculum/src/main/AndroidManifest.xml
@@ -3,8 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.periculum">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_SMS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application>
         <provider
