--- a/periculum/build.gradle
+++ b/periculum/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     def retrofit_version = '2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:'+retrofit_version
     implementation 'com.squareup.retrofit2:converter-gson:'+retrofit_version
+    implementation 'com.google.android.gms:play-services-location:19.0.0'
 }
 
 afterEvaluate {
