--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,6 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    implementation project(':periculum')
+    implementation 'com.github.AshaluwalaKazeem:Periculum:v1.0.1-beta'
+//    implementation project(':periculum')
 }
