--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-//    implementation 'com.github.AshaluwalaKazeem:Periculum:1.0.5-beta'
-    implementation project(':periculum')
+
+    implementation 'com.github.AshaluwalaKazeem:Periculum:1.0.6-beta'
+//    implementation project(':periculum')
 }
