--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
 
-    implementation 'com.github.AshaluwalaKazeem:Periculum:1.0.6-beta'
-//    implementation project(':periculum')
+//    implementation 'com.github.AshaluwalaKazeem:Periculum:1.0.6-beta'
+    implementation project(':periculum')
 }
