--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    testImplementation "org.robolectric:robolectric:4.7.3"
+    androidTestImplementation "org.robolectric:robolectric:4.7.3"
+
 
 
 //    implementation 'com.github.AshaluwalaKazeem:Periculum:1.0.6-beta'
