--- a/periculum/build.gradle
+++ b/periculum/build.gradle
@@ -38,19 +38,19 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.test:core-ktx:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    implementation "androidx.startup:startup-runtime:1.0.0-alpha01"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-RC2'
+    implementation "androidx.startup:startup-runtime:1.2.0-alpha01"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
     def retrofit_version = '2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:'+retrofit_version
     implementation 'com.squareup.retrofit2:converter-gson:'+retrofit_version
-    implementation 'com.google.android.gms:play-services-location:19.0.0'
-    testImplementation "org.robolectric:robolectric:4.7.3"
-    androidTestImplementation "org.robolectric:robolectric:4.7.3"
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.8'
+
 }
 
 afterEvaluate {
