--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,6 @@ dependencies {
 
 
 
-//    implementation 'com.github.AshaluwalaKazeem:Periculum:1.0.6-beta'
+//    implementation 'com.github.Periculum-io:Periculum:1.1.0'
     implementation project(':periculum')
 }
