--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,6 @@ dependencies {
 
 
 
-//    implementation 'com.github.Periculum-io:Periculum:1.1.0'
-    implementation project(':periculum')
+    implementation 'com.github.Periculum-io:Periculum:2.0.1'
+//    implementation project(':periculum')
 }
